{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 64,
  "lineage": "e552f191-9206-3906-8b2f-7002c5057b30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-edc0621e1473b515b",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-edc0621e1473b515b",
            "association_id": "eipassoc-a6f354e3f6a4091cc",
            "domain": "vpc",
            "id": "eipalloc-edc0621e1473b515b",
            "instance": "i-36ced806dc254b860",
            "network_interface": "eni-61f8d58be85cb9bf3",
            "private_dns": "ip-10-0-0-232.ec2.internal",
            "private_ip": "10.0.0.232",
            "public_dns": "ec2-127-116-247-91.compute-1.amazonaws.com",
            "public_ip": "127.116.247.91",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-15fb619c67614a9ee",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-15fb619c67614a9ee",
            "association_id": "eipassoc-46ba4314feb9065e0",
            "domain": "vpc",
            "id": "eipalloc-15fb619c67614a9ee",
            "instance": "i-f06d1c89b02218b7f",
            "network_interface": "eni-4ab7deea648378d4f",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-127-223-37-254.compute-1.amazonaws.com",
            "public_ip": "127.223.37.254",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b32389c724d1cdf7e",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-b32389c724d1cdf7e",
            "domain": "vpc",
            "id": "eipalloc-b32389c724d1cdf7e",
            "public_dns": "ec2-127-248-168-45.compute-1.amazonaws.com",
            "public_ip": "127.248.168.45",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-e568ee2750fddd6c4",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-e568ee2750fddd6c4",
            "domain": "vpc",
            "id": "eipalloc-e568ee2750fddd6c4",
            "public_dns": "ec2-127-57-148-205.compute-1.amazonaws.com",
            "public_ip": "127.57.148.205",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000002",
            "arn": "arn:aws:ec2:us-east-1::instance/i-cac9f32e229e91d07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-cac9f32e229e91d07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-86f14caf082a2c624"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-86f14caf082a2c624",
            "private_dns": "ip-10-0-2-218.ec2.internal",
            "private_ip": "10.0.2.218",
            "public_dns": "ec2-172-21-0-4.localhost.localstack.cloud",
            "public_ip": "172.21.0.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-b63330d616c01fa16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7e522be7bd0bb2d6a",
            "tags": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000002",
            "arn": "arn:aws:ec2:us-east-1::instance/i-4127f983e4acae7de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-4127f983e4acae7de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-8eb1082eb2e742e8b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-8eb1082eb2e742e8b",
            "private_dns": "ip-10-0-3-159.ec2.internal",
            "private_ip": "10.0.3.159",
            "public_dns": "ec2-172-21-0-3.localhost.localstack.cloud",
            "public_ip": "172.21.0.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-d29d279adb3860729",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e8478777ac15a4dff",
            "tags": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-36ced806dc254b860",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-36ced806dc254b860",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-61f8d58be85cb9bf3"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-61f8d58be85cb9bf3",
            "private_dns": "ip-10-0-0-232.ec2.internal",
            "private_ip": "10.0.0.232",
            "public_dns": "ec2-172-21-0-6.localhost.localstack.cloud",
            "public_ip": "172.21.0.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-58b6fc073323806ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4e8c9f91115c90c7d",
            "tags": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-f06d1c89b02218b7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-f06d1c89b02218b7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-4ab7deea648378d4f"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-4ab7deea648378d4f",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-172-21-0-5.localhost.localstack.cloud",
            "public_ip": "172.21.0.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-de193d63c8d562a3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bf7940df9fc04fb26",
            "tags": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-bacc8583c55604bee",
            "id": "igw-bacc8583c55604bee",
            "owner_id": "000000000000",
            "tags": {
              "Name": "fleet-portal-dev-internet-gateway",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-internet-gateway",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/b6fdedf2f5606236",
            "arn_suffix": "app/fleet-portal-dev-backend/b6fdedf2f5606236",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fleet-portal-dev-backend.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/b6fdedf2f5606236",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fleet-portal-dev-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-19faa5aae707bb6c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-7e522be7bd0bb2d6a"
              },
              {
                "subnet_id": "subnet-e8478777ac15a4dff"
              }
            ],
            "subnets": [
              "subnet-7e522be7bd0bb2d6a",
              "subnet-e8478777ac15a4dff"
            ],
            "tags": {
              "Name": "fleet-portal-dev-backend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_lb",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/9a37208a315f1f7a",
            "arn_suffix": "app/fleet-portal-dev-frontend/9a37208a315f1f7a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fleet-portal-dev-frontend.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/9a37208a315f1f7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fleet-portal-dev-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-a50c9bc176dbfb18f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4e8c9f91115c90c7d"
              },
              {
                "subnet_id": "subnet-bf7940df9fc04fb26"
              }
            ],
            "subnets": [
              "subnet-4e8c9f91115c90c7d",
              "subnet-bf7940df9fc04fb26"
            ],
            "tags": {
              "Name": "fleet-portal-dev-frontend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-backend/b6fdedf2f5606236/492e458da55edc90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-backend/b6fdedf2f5606236/492e458da55edc90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/b6fdedf2f5606236",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend_http",
            "aws_security_group.backend_lb",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/9a37208a315f1f7a/d704e65cbdd80e7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/9a37208a315f1f7a/d704e65cbdd80e7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/9a37208a315f1f7a",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
            "arn_suffix": "targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fleet-portal-dev-backend-http",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
            "arn_suffix": "targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fleet-portal-dev-frontend-http",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57-2026031916165234280000000e",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
            "target_id": "i-cac9f32e229e91d07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_lb_target_group.backend_http",
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57-2026031916165234280000000f",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/ee34e9a5c94ede57",
            "target_id": "i-4127f983e4acae7de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_lb_target_group.backend_http",
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde-20260319161653434000000011",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
            "target_id": "i-36ced806dc254b860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde-20260319161653428700000010",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/59e24cdd2856fcde",
            "target_id": "i-f06d1c89b02218b7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b32389c724d1cdf7e",
            "association_id": "eipassoc-b690652cc6633f141",
            "connectivity_type": "public",
            "id": "nat-0658846ce97676c3e",
            "network_interface_id": "eni-a819fcaf3490b354e",
            "private_ip": "10.80.84.55",
            "public_ip": "127.248.168.45",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-7e522be7bd0bb2d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-e568ee2750fddd6c4",
            "association_id": "eipassoc-e6c6de8fd73e701a6",
            "connectivity_type": "public",
            "id": "nat-327c8f824a30342c7",
            "network_interface_id": "eni-a16e9d57c6557bc41",
            "private_ip": "10.246.50.216",
            "public_ip": "127.57.148.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-e8478777ac15a4dff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-86f14caf082a2c624",
            "id": "eni-86f14caf082a2c624",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:23602x:17102x:1702x",
            "owner_id": "000000000000",
            "private_ip": "10.0.2.218",
            "private_ip_list": [
              "10.0.2.218"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.218"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-bd66b2749603b5b78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7e522be7bd0bb2d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-8eb1082eb2e742e8b",
            "id": "eni-8eb1082eb2e742e8b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:11302x:3302x:10402x",
            "owner_id": "000000000000",
            "private_ip": "10.0.3.159",
            "private_ip_list": [
              "10.0.3.159"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.159"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-bd66b2749603b5b78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e8478777ac15a4dff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-61f8d58be85cb9bf3",
            "id": "eni-61f8d58be85cb9bf3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:12402x:5802x:14802x",
            "owner_id": "000000000000",
            "private_ip": "10.0.0.232",
            "private_ip_list": [
              "10.0.0.232"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.232"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-bd66b2749603b5b78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4e8c9f91115c90c7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-4ab7deea648378d4f",
            "id": "eni-4ab7deea648378d4f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:4002x:10802x:14102x",
            "owner_id": "000000000000",
            "private_ip": "10.0.1.24",
            "private_ip_list": [
              "10.0.1.24"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.24"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-bd66b2749603b5b78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bf7940df9fc04fb26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-481e591047370d8b9",
            "id": "rtb-481e591047370d8b9",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0658846ce97676c3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-8df78e8a213597ec8",
            "id": "rtb-8df78e8a213597ec8",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-327c8f824a30342c7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-fd8175732ce9943fe",
            "id": "rtb-fd8175732ce9943fe",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-bacc8583c55604bee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-36d7c8d396bd7d369",
            "route_table_id": "rtb-481e591047370d8b9",
            "subnet_id": "subnet-7e522be7bd0bb2d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-e4784903094c9af16",
            "route_table_id": "rtb-8df78e8a213597ec8",
            "subnet_id": "subnet-e8478777ac15a4dff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8a0bcbe64a5a8974e",
            "route_table_id": "rtb-fd8175732ce9943fe",
            "subnet_id": "subnet-4e8c9f91115c90c7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-78f3ffd88a5ccda07",
            "route_table_id": "rtb-fd8175732ce9943fe",
            "subnet_id": "subnet-bf7940df9fc04fb26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-bcf495ee63ea0a7cc",
            "description": "Security group for the backend EC2 instances",
            "egress": [],
            "id": "sg-bcf495ee63ea0a7cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-161b3d9afa0d5bc52"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-19faa5aae707bb6c6"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "fleet-portal-dev-backend-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-19faa5aae707bb6c6",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-bcf495ee63ea0a7cc"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "id": "sg-19faa5aae707bb6c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-161b3d9afa0d5bc52"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fleet-portal-dev-backend-lb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-161b3d9afa0d5bc52",
            "description": "Security group for the frontend EC2 instances",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-19faa5aae707bb6c6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-161b3d9afa0d5bc52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-a50c9bc176dbfb18f"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "fleet-portal-dev-frontend-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-a50c9bc176dbfb18f",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5000
              }
            ],
            "id": "sg-a50c9bc176dbfb18f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fleet-portal-dev-frontend-lb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-2843347188",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-bcf495ee63ea0a7cc",
            "security_group_rule_id": "sgr-2035cf816ebf62814",
            "self": false,
            "source_security_group_id": "sg-19faa5aae707bb6c6",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.backend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_lb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-1828801112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-19faa5aae707bb6c6",
            "security_group_rule_id": "sgr-4046ec001cb9fea73",
            "self": false,
            "source_security_group_id": "sg-bcf495ee63ea0a7cc",
            "timeouts": null,
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.backend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_lb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2283502762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-19faa5aae707bb6c6",
            "security_group_rule_id": "sgr-543413782da78445c",
            "self": false,
            "source_security_group_id": "sg-161b3d9afa0d5bc52",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_lb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-168058649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-bcf495ee63ea0a7cc",
            "security_group_rule_id": "sgr-47e967d49570308d0",
            "self": false,
            "source_security_group_id": "sg-161b3d9afa0d5bc52",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1467547850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-161b3d9afa0d5bc52",
            "security_group_rule_id": "sgr-7f2a142a989848c51",
            "self": false,
            "source_security_group_id": "sg-19faa5aae707bb6c6",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_lb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-1118368967",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-161b3d9afa0d5bc52",
            "security_group_rule_id": "sgr-145a6fb60d3157f5f",
            "self": false,
            "source_security_group_id": "sg-a50c9bc176dbfb18f",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-3755989461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-a50c9bc176dbfb18f",
            "security_group_rule_id": "sgr-092f76996557f24c0",
            "self": false,
            "source_security_group_id": "sg-a50c9bc176dbfb18f",
            "timeouts": null,
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-747624705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-a50c9bc176dbfb18f",
            "security_group_rule_id": "sgr-5490cd4a46bb162c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2591927924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-161b3d9afa0d5bc52",
            "security_group_rule_id": "sgr-fa2b79694da5953cb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-7e522be7bd0bb2d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-7e522be7bd0bb2d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-e8478777ac15a4dff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e8478777ac15a4dff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-4e8c9f91115c90c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-4e8c9f91115c90c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-bf7940df9fc04fb26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-bf7940df9fc04fb26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-362ef37fe5ec4a939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-362ef37fe5ec4a939",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-a4bac9c6c1d343d94",
            "default_route_table_id": "rtb-50ba43bf0c9204af9",
            "default_security_group_id": "sg-bd66b2749603b5b78",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-362ef37fe5ec4a939",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-50ba43bf0c9204af9",
            "owner_id": "000000000000",
            "tags": {
              "Name": "fleet-portal-dev-network",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-network",
              "application": "fleet-portal",
              "environment": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}